test-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-nginx-test
  template:
    metadata:
      labels:
        app: ingress-nginx-test
    spec:
      containers:
        - name: ingress-nginx-test
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-test-service
spec:
  selector:
    app: ingress-nginx-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  name: ingress-nginx-test-ingress
spec:
  rules:
    - host: abing.touch.com
      http:
        paths:
          - backend:
              service:
                name: ingress-nginx-test-service
                port:
                  number: 80
            path: /
            pathType: Prefix
# 没有证书的时候不用
#  tls:
#    - hosts:
#        - abing.touch.com
#      secretName: ingress-nginx-test-tls
